...
  "OverlayOpen": {
    "Version": "Version",
    "BluetoothCardBody": "You need to turn on Bluetooth in your phone’s settings so COVID Alert can work.",
    "BluetoothCardAction": "Turn on Bluetooth",
    "EnterCodeCardTitle": "Diagnosed with COVID-19?",
    "EnterCodeCardBody": "To let people know they’ve been exposed, you need a one-time key. We’ll also ask for details to help narrow down when you were likely most contagious.",
    "EnterCodeCardAction": "Enter your one-time key",
    "EnterCodeCardTitleDiagnosed": "You’re helping limit COVID-19",
    "EnterCodeCardBodyDiagnosed": "Thank you for doing your part to limit the spread. ",
    "EnterCodeCardDiagnosedCountdown": {
      "One": "{number} day left!",
      "Other": "{number} days left!"
    },
...
    "step-3AltText": "A hand-drawn illustration of a mobile phone uploading a numeric code to a cloud.",
    "step-3": "If a person with the app is diagnosed with COVID-19, they can choose to upload the random codes their phone sent.\n\nThey can also give details to help narrow down when they were likely most contagious. Those details tell the phone which random codes to upload.\n\nThe random codes go into a central server. No other information is sent to the server.",
    "step-4Title": "Looking for exposures",
    "step-4AltText": "A hand-drawn illustration of a mobile phone uploading a numeric code to a cloud.",
    "step-4": "Every day, whenever it has an Internet connection, your phone will get a list of the random codes from people who reported a diagnosis.\n\nIf it finds codes that match, the app notifies you that you’ve been exposed and explains what to do next.",
    "ActionBack": "Back",
    "ActionNext": "Next",
    "ActionEnd": "Done",
    "Close": "Close"
  },
  "QRCodeOnboarding": {
    "step-1Title": "Pilot project in Ottawa: exposures from places visited",
    "step-1AltText": "Hand-drawn illustration of a street front of various businesses.",
...
      "Title": "Are you sure you want to dismiss this alert?",
      "Cancel": "Cancel",
      "Confirm": "Yes, dismiss"
    }
  },
  "Errors": {
    "Action": "OK",
    "TekUploadNoDate": {
      "Title": "",
      "Body": "You need to choose a date before you can share exposures."
    },
    "TekUploadOffline": {
      "Title": "Lost connection",
...
