...
          <Text marginBottom="l">
            <Text>{BoldText(i18n.translate('DataUpload.Step0.List.2'))}</Text>
          </Text>
          <Text marginBottom="l">
            <Text>{BoldText(i18n.translate('DataUpload.Step0.List.3'))}</Text>
          </Text>
          <Text marginBottom="l" testID="Step0Body">
            <Text>{BoldText(i18n.translate('DataUpload.Step0.Body1'))}</Text>
          </Text>

          <Box marginTop="m">
            <Button variant="thinFlat" text={i18n.translate('DataUpload.Step0.CTA')} onPress={onNext} />
          </Box>
...
